# skill-studio

./: .env.local.example  .gitignore  README.md  index.html  package.json
scripts/: build-mac.sh  fetch-skills.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/commands/: install.rs  mod.rs  settings.rs  skills.rs
src-tauri/src/models/: mod.rs  skill.rs
src/components/: DetailPanel.tsx  RepoCard.tsx  SearchBar.tsx  Settings.tsx  Sidebar.tsx  SkillCard.tsx  SkillDetail.tsx
src/hooks/: useFavorites.ts  useSettings.ts  useSkills.ts
src/types/: skill.ts
